425pxまでのレスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <!-- font awesome読み込み-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
     <title>ch9-exercise</title>
